[gd_scene load_steps=2 format=3 uid="uid://me7klkfacpns"]

[ext_resource type="Script" uid="uid://77myd02xbs8w" path="res://ui/main_menu.gd" id="1_t7e0r"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t7e0r")

[node name="StartButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="HostButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="JoinButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Setting" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="ExitButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
